--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "cross-mp-power",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "description": "跨平台小程序能力封装",
     "main": "esm/index.js",
     "module": "esm/index.js",
-    "types": "src/index.ts",
+    "types": "esm/index.d.ts",
     "sideEffects": false,
     "scripts": {
         "prepare": "husky install",
